--- a/style.css
+++ b/style.css
@@ -1,5 +1,41 @@
+header{
+  text-align: center;
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 body {
   width: 100%;
   height: 100%;
   margin: 0;
+}
+
+a {
+  padding-left: 10px;
+  padding-right: 10px;
+  background: lightcoral;
+}
+
+figcaption {
+  font-size: 12px;
+  text-align: center;
+}
+
+section#featured-property p {
+  margin: auto;
+  text-align: center;
+  width: 800px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+section#details div {
+  float: left;
+  background-color: blueviolet;
+  text-align: center;
+  width: 25%;
 }
